--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
+    "gulp-image": "^6.3.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-strip-comments": "^2.5.2",
@@ -19,7 +20,7 @@
     "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3"
   }
