--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Bruno Saldanha",
+  "author": "João Matere",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "browser-sync": "^2.29.3",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-image": "^6.3.1",
@@ -22,6 +26,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "bootstrap": "^5.2.3",
+    "gulp-htmlmin": "^5.0.1",
     "jquery": "^3.6.3"
   }
 }
